<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="center_horizontal" >

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddShows">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:text="@string/update_list"
        android:id="@+id/addshows_add"
        android:layout_gravity="right"
        android:gravity="center"
        android:onClick="addShowsToList" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/GOT"
        android:onClick="addGOT"
        android:id="@+id/toggle_GOT"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/grey"
        android:onClick="addGreysAnatomy"
        android:id="@+id/toggle_grey"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/dare"
        android:onClick="addDaredevil"
        android:id="@+id/toggle_dare"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/flash"
        android:onClick="addFlash"
        android:id="@+id/toggle_flash"/>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/the100"
        android:onClick="add100"
        android:id="@+id/toggle_100"/>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/once"
        android:onClick="addOnce"
        android:id="@+id/toggle_once"/>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/fob"
        android:onClick="addFOB"
        android:id="@+id/toggle_fob"/>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/murder"
        android:onClick="addMurder"
        android:id="@+id/toggle_murder"/>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/silicon"
        android:onClick="addSilicon"
        android:id="@+id/toggle_silicon"/>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/mad"
        android:onClick="addMad"
        android:id="@+id/toggle_mad"/>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/hoc"
        android:onClick="addHOC"
        android:id="@+id/toggle_hoc"/>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/arrow"
        android:onClick="addArrow"
        android:id="@+id/toggle_arrow"/>

    </LinearLayout>
</ScrollView>