<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Mainscreen">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/refresh"/>

    <item
        android:id="@+id/action_createThread"
        android:title="@string/action_createThread"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/comment" />

    <item
        android:id="@+id/action_myActivity"
        android:title="@string/action_myActivity"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_addShows"
        android:title="@string/action_addShows"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
